--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-cayman
+title: Car Dealership E-Commerce Platform
+author: Stephen Zq
+description: This project emphasizes the design and coding of an object oriented application using multiple arrays, classes, and methods. Sequence, selection, and iteration logic are also used, as are logical program blocks, input / output dialogs, and the object-messaging model.
